@@ -2,6 +2,13 @@ Summary of Changes to DuroDBMS
 
 DuroDBMS 0.26
 
+- In Duro D/T it is now possible to omit the module name when calling a
+  user-defined update operator from another operator that belongs to the same
+  module.
+
+- Dropped RDB_get_update_op_e(). RDB_get_update_op() now has the same signature
+  as RDB_get_update_op_e() previously had.
+
 - RDB_rollback_all() is available in rdb.h.
 
 - Added arguments getfnp and getarg to RDB_extend_tuple() for retrieving
@@ -21,9 +28,9 @@ DuroDBMS 0.26
 
 - Added D_INSERT and I_DELETE. RDB_ma_insert and RDB_ma_vdelete
   now contain a flags field which must be initialized when a pointer
-  to this structure is passed to RDB_multi_assign().
+  to the respective structure is passed to RDB_multi_assign().
 
-- Added built-in read-only operators strfind_b() and substr_b().
+- Added built-in read-only operators strfind_b(), substr_b(), and strlen_b().
 
 DuroDBMS 0.25
 
